--- a/db_compare/src/main/resources/static/uploadify/uploadify.css
+++ b/db_compare/src/main/resources/static/uploadify/uploadify.css
@@ -24,9 +24,6 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	);
 	background-position: center top;
 	background-repeat: no-repeat;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
 	border: 2px solid #808080;
 	color: #FFF;
 	font: bold 12px Arial, Helvetica, sans-serif;
@@ -71,7 +68,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	background-color: #FDE5DD !important;
 }
 .uploadify-queue-item .cancel a {
-	background: url('../img/uploadify-cancel.png') 0 0 no-repeat;
+	background: url('uploadify-cancel.png') 0 0 no-repeat;
 	float: right;
 	height:	16px;
 	text-indent: -9999px;
